Some changes in hw1 and hw2

--- a/hw2/lab_tagging.ipynb
+++ b/hw2/lab_tagging.ipynb
@@ -1239,7 +1239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 97,
    "metadata": {
     "id": "hhD1r8OLHIRX",
     "pycharm": {
@@ -1330,10 +1330,9 @@
     "        ######### YOUR CODE HERE #############\n",
     "        ######################################\n",
     "        # self.decode(torch.log(self.model(x_batch).softmax(dim=-1)))\n",
-    "        with torch.no_grad():\n",
-    "            bathc_log_probs = torch.log(self.model(x_batch).softmax(dim=-1))\n",
-    "            batch_out = torch.cat([self.decode(bathc_log_probs[i]).reshape(1, -1) for i in range(bathc_log_probs.shape[0])], dim=0)\n",
-    "            return batch_out"
+    "        bathc_log_probs = torch.log(self.model(x_batch).softmax(dim=-1))\n",
+    "        batch_out = torch.cat([self.decode(bathc_log_probs[i]).reshape(1, -1) for i in range(bathc_log_probs.shape[0])], dim=0)\n",
+    "        return batch_out"
    ]
   },
   {
@@ -1350,7 +1349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 98,
    "metadata": {
     "id": "Asw-_zPBHIRY",
     "pycharm": {
@@ -1376,18 +1375,18 @@
     "\n",
     "\n",
     "def get_f1(eps):\n",
-    "    viterbi_prep = ViterbiPostprocesser(biLSTM, w=1 + eps)\n",
-    "    viterbi_prep.fit(train_dataset)\n",
-    "    return -evaluator.eval_conll(viterbi_prep, val_loader)['f1']\n",
+    "    preprocess = ViterbiPostprocesser(biLSTM, w=1 + eps)\n",
+    "    preprocess.fit(train_dataset)\n",
+    "    return -evaluator.eval_conll(preprocess, val_loader)['f1']\n",
     "\n",
-    "eps_optimized = minimize_scalar(get_f1, bounds=(-0.1, 0.1), method='bounded', options={'maxiter': 5}).x\n",
+    "eps_optimized = minimize_scalar(get_f1, method='bounded', bounds=(-0.1, 0.1), options={'maxiter': 5}).x\n",
     "print(eps_optimized)\n",
     "\n",
     "preprocess = ViterbiPostprocesser(biLSTM, w=1 + eps_optimized)\n",
     "preprocess.fit(train_dataset)\n",
     "\n",
     "print(evaluator.eval_conll(preprocess, test_loader))\n",
-    "print(evaluator.eval_conll(preprocess, val_loader))A"
+    "print(evaluator.eval_conll(preprocess, val_loader))"
    ]
   },
   {
